remove unnecessary http-server

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.12.2",
-    "express": "^4.12.3",
-    "http-server": "^0.7.5"
+    "express": "^4.12.3"
   }
 }
